Indexben vannak kommandok :)

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <!--npx ng new Katicabufe-->
 <!--npm install @angular/cli@18-->
-<!--scss-->
+<!--scss
+ls node_modules/bootstrap-icons/font/css
+npm install bootstrap-icons
+npm install bootstrap
+cd src/app/
+cd components/
+npx ng g c categories/form
+npx ng g c navbar
+-->
 <html lang="en">
 <head>
   <meta charset="utf-8">
