--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <!--npx ng new Katicabufe-->
 <!--npm install @angular/cli@18-->
 <!--scss
+git add .
+git commit -m "update"
+git push -u origin main
 ls node_modules/bootstrap-icons/font/css
 npm install bootstrap-icons
 npm install bootstrap
